--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-
+<!-- ! THIS LINE SHALL BE INCLUDED IN EVERY SUBSTANTIAL COPY OF THIS WEBSITE.
+  ! MADE BY FURY#6717
+  ! Frameworks: Bulma, Solar Theme;
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -54,6 +57,87 @@
     <meta name="author" content="spidirman#4534">
     <meta name="copyright" content="spidirman#4534" />
 
+    <script>
+
+        const p = {
+            help() {
+                console.log("p.help() : this \np.clear() : clear console\np.support(): open support server link\n\nmade by spidirman#4534");
+            },
+            support() {
+                window.open("https://discord.com/invite/U3u5EyrgTD")
+                console.log("server support oppened");
+            },
+            clear() {
+                clear()
+                console.log("console cleared");
+                fff()
+            },
+        };
+
+        fff()
+        function fff() {
+            var wait = 'color:#7289da; font-size: 100px; font-weight: bold; -webkit-text-stroke: 3px black;'
+            var data = 'color:red; font-size: 20px; font-weight: bold;'
+            console.log("%cWait !", wait);
+            console.log("%cyou can write p.help() in the console for custom commands!", data)
+        };
+
+
+
+        function myFunction() {
+            const bgc = document.getElementById("formehaut").style.backgroundColor;
+
+            if (bgc == 'rgb(40, 123, 201)') {
+
+                document.getElementById("colormode").className = "fa-solid fa-moon";
+                document.getElementById("colormode").textContent = " dark";
+                document.getElementById("colormode").style.color = "rgb(35, 88, 104)";
+
+                document.getElementById("body").style.backgroundColor = "rgb(23, 22, 22)";
+
+                document.getElementById("formehaut2").style.fill = "rgb(23, 22, 22)";
+                document.getElementById("formehaut").style.backgroundColor = "rgb(31, 38, 49)";
+
+                document.getElementById("navbar").style.backgroundColor = "rgb(44, 44, 44)";
+                document.getElementById("navbar-menu").style.backgroundColor = "rgb(44, 44, 44)";
+
+                document.getElementById("formebas").style.fill = "rgb(31, 38, 49)";
+
+                document.getElementById("formefooter").style.fill = "rgb(31, 38, 49)";
+                document.getElementById("footer").style.backgroundColor = "rgb(31, 38, 49)";
+
+                console.log("darkmode")
+            }
+            else {
+                document.getElementById("colormode").className = "fa-solid fa-sun";
+                document.getElementById("colormode").textContent = " light";
+                document.getElementById("colormode").style.color = "rgb(189, 195, 80)";
+
+                document.getElementById("body").style.backgroundColor = "rgb(0, 43, 54)";
+
+                document.getElementById("formehaut2").style.fill = "rgb(0, 43, 54)";
+                document.getElementById("formehaut").style.backgroundColor = "rgb(40, 123, 201)";
+
+
+                document.getElementById("navbar").style.backgroundColor = "rgb(7, 54, 66)";
+                document.getElementById("navbar-menu").style.backgroundColor = "rgb(7, 54, 66)";
+
+                document.getElementById("formebas").style.fill = "rgb(40, 123, 201)";
+
+                document.getElementById("formefooter").style.fill = "rgb(7, 54, 66)";
+                document.getElementById("footer").style.backgroundColor = "rgb(7, 54, 66)";
+
+                console.log("lightmode")
+
+            }
+
+        };
+
+
+
+
+
+    </script>
 </head>
 <style>
     body {
@@ -61,7 +145,7 @@
     }
 </style>
 
-<body>
+<body id="body" style="background-color:rgb(0, 43, 54)">
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
         new Crate({
             server: '911936163395301379',
@@ -69,13 +153,15 @@
             glyph: ['https://c.tenor.com/aDOTKsaCjVMAAAAM/furry-discord.gif', '100%']
         })
     </script>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+    <nav id="navbar" style="background-color:rgb(7, 54, 66)" class="navbar" role="navigation"
+        aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item"
                 href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join">
                 <img src="img/discord.png" width="30px" height="55px">
             </a>
-
+            <p class="navbar-item"><a onclick="myFunction()" id="colormode" style="color:rgb(189, 195, 80)"
+                    class="fa-solid fa-sun"> light</a></p>
             <a role="button" class="navbar-burger" data-target="navbarBasicExample" aria-label="menu"
                 aria-expanded="false">
                 <span aria-hidden="true"></span>
@@ -91,7 +177,7 @@
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
                 <!-- ?Change the navbar-start to navbar-end if u want the links to be at right.-->
-                <div class="navbar-item"><a onclick="myFunction()" id="mode" class="fa-solid fa-moon"></a></div>
+                <div class="navbar-item"></div>
                 <a class="navbar-item" href="commands">
                     Commands
                 </a>
@@ -106,7 +192,7 @@
                         Vote
                     </a>
                     <!--Dropdown menu for vote-->
-                    <div class="navbar-dropdown">
+                    <div id="navbar-menu" style="background-color:rgb(33, 62, 104)" class="navbar-dropdown">
                         <a class="navbar-item" href="https://top.gg/bot/994970912271122452" target="_blank">
                             Top.gg
                         </a>
@@ -133,51 +219,6 @@
         <div class="title">
             <p class="header-ub"><b>PopCord</b></p>
 
-            <script>
-
-                function myFunction() {
-                    const bgc = document.getElementById("bg").style.backgroundColor;
-                    const bgcf = document.getElementById("bg").style.fill;
-                    const mode = document.getElementById("mode").style.fill;
-                    if (bgc == 'rgb(40, 123, 201)') {
-                        document.getElementById("bg").style.backgroundColor = "rgb(44, 44, 44)";
-                        document.getElementById("bgf").style.fill = "rgb(44, 44, 44)";
-                        document.getElementById("mode").className = "fa-solid fa-moon";
-                        console.log("ok black")
-                    }
-                    else {
-                        document.getElementById("bg").style.backgroundColor = "rgb(40, 123, 201)";
-                        document.getElementById("bgf").style.fill = "rgb(40, 123, 201)";
-                        console.log("ok blue")
-                        document.getElementById("mode").className = "fa-solid fa-sun";
-                    }
-
-                };
-                const p = {
-                    help() {
-                        console.log("p.help() : this \np.clear() : clear console\np.support(): open support server link\n\nmade by spidirman#4534");
-                    },
-                    support() {
-                        window.open("https://discord.com/invite/U3u5EyrgTD")
-                        console.log("server support oppened");
-                    },
-                    clear() {
-                        clear()
-                        console.log("console cleared");
-                        fff()
-                    },
-                };
-
-
-
-                fff()
-                function fff() {
-                    var wait = 'color:#7289da; font-size: 100px; font-weight: bold; -webkit-text-stroke: 3px black;'
-                    var data = 'color:red; font-size: 20px; font-weight: bold;'
-                    console.log("%cWait !", wait);
-                    console.log("%cyou can write p.help() in the console for custom commands!", data)
-                };
-            </script>
         </div>
         <div class="desc">
             <h6>ultimate multifunction bot</h6>
@@ -188,9 +229,9 @@
                     class="fab fa-fw fa-fw fa-discord"></i> Add Bot!</a>
         </div>
     </div>
-    <div id="bg" class="container2">
+    <div style="background-color: rgb(40, 123, 201)" id="formehaut" class="container2">
         <div class="divider12"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                <path fill="#002b36" fill-opacity="1"
+                <path id="formehaut2" fill="rgb(0, 43, 54)" fill-opacity="1"
                     d="M0,96L60,80C120,64,240,32,360,53.3C480,75,600,149,720,160C840,171,960,117,1080,117.3C1200,117,1320,171,1380,197.3L1440,224L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
                 </path>
             </svg>
@@ -313,10 +354,10 @@
                     <!-- question start -->
                     <div class="topic">
                         <div class="open">
-                            <h2 class="question">9. 404
+                            <h2 class="question">9. e
                             </h2><span class="faq-t"></span>
                         </div>
-                        <p class="answer"> not found</p>
+                        <p class="answer"> idk</p>
                     </div>
                     <!-- question end -->
                 </main>
@@ -328,7 +369,7 @@
         <br>
     </div>
     <div class="divider12"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path id="bgf" fill="rgb(44, 44, 44)" fill-opacity="1"
+            <path id="formebas" fill="rgb(40, 123, 201)" fill-opacity="1"
                 d="M0,96L60,80C120,64,240,32,360,53.3C480,75,600,149,720,160C840,171,960,117,1080,117.3C1200,117,1320,171,1380,197.3L1440,224L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
             </path>
         </svg></div>
@@ -355,12 +396,12 @@
 
     <div style="display:flex" class="divider12">
         <svg xmlns=" http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="#073642" fill-opacity="1"
+            <path id="formefooter" fill="rgb(7, 54, 66)" fill-opacity="1"
                 d="M0,192L48,176C96,160,192,128,288,133.3C384,139,480,181,576,202.7C672,224,768,224,864,224C960,224,1056,224,1152,234.7C1248,245,1344,267,1392,277.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
     </div>
-    <div class="footer">
+    <div id="footer" style="background-color:rgb(7, 54, 66)" class="footer">
 
         <div class="copyright" align="center">
             <script>
